# coinium

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libcoiniumconsensus.pc.in
build-aux/m4/: coinium_find_bdb48.m4  coinium_qt.m4  coinium_subdir_to_include.m4
contrib/: README.md  coinium-cli.bash-completion  coinium-qt.pro  coinium-tx.bash-completion  coiniumd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  coinium-qt.desktop  coinium-qt.install  coinium-qt.lintian-overrides  coinium-qt.protocol  coinium-tx.bash-completion  coinium-tx.install  coiniumd.bash-completion  (+8 more)
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coinium-cli-res.rc  coinium-cli.cpp  coinium-tx-res.rc  coinium-tx.cpp  coiniumd-res.rc  coiniumd.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  (+48 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coinium.cpp  coinium.qrc  coinium_locale.qrc  coiniumaddressvalidator.cpp  coiniumaddressvalidator.h  coiniumamountfield.cpp  coiniumamountfield.h  coiniumgui.cpp  coiniumgui.h  coiniumstrings.cpp  coiniumunits.cpp  coiniumunits.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: coinium_af.ts  coinium_af_ZA.ts  coinium_ar.ts  coinium_be_BY.ts  coinium_bg.ts  coinium_bg_BG.ts  coinium_ca.ts  coinium_ca@valencia.ts  coinium_ca_ES.ts  coinium_cs.ts  coinium_cs_CZ.ts  coinium_cy.ts  coinium_da.ts  coinium_de.ts  coinium_el.ts  coinium_el_GR.ts  coinium_en.ts  coinium_en_GB.ts  coinium_eo.ts  coinium_es.ts  coinium_es_AR.ts  coinium_es_CL.ts  coinium_es_CO.ts  coinium_es_DO.ts  coinium_es_ES.ts  coinium_es_MX.ts  coinium_es_UY.ts  coinium_es_VE.ts  coinium_et.ts  coinium_eu_ES.ts  coinium_fa.ts  coinium_fa_IR.ts  coinium_fi.ts  coinium_fr.ts  coinium_fr_CA.ts  coinium_fr_FR.ts  coinium_gl.ts  coinium_he.ts  coinium_hi_IN.ts  coinium_hr.ts  (+46 more)
src/qt/res/: coinium-qt-res.rc
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: coiniumconsensus.cpp  coiniumconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_coinium_NativeSecp256k1.c  org_coinium_NativeSecp256k1.h  org_coinium_Secp256k1Context.c  org_coinium_Secp256k1Context.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  coinium-util-test.py  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+17 more)
src/test/data/: README.md  coinium-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+151 files in other folders)
